# DevSecOps

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  run_backend.bat  run_frontend.bat  sonar-project.properties
.github/workflows/: ci.yml  devsecops.yml  quality-gates.yml
backend/: Dockerfile  debug_db.py  requirements.txt  test_circular.py
backend/app/: auth.py  main.py  main.py.authbak
backend/app/engine/: assistant_chat.py  association_inference.py  category_expansion.py  graph_builder.py  llm_usage.py  metadata.py  mock_generator.py  multi_table_synthesizer.py  pii_detector.py  profiler.py  project_summary.py  relational_planner.py  relationship_inference.py  schema_parser.py  semantic_inference.py  synthesizer.py  timeseries_analyzer.py  timeseries_generator.py  usage_tracking.py
frontend/: Dockerfile  auth.py  main.py  test-gui.py
frontend/.nicegui/: storage-user-02de0f23-1182-4613-839c-f11f145585cd.json  storage-user-e45b5b1e-d34a-42e5-8599-971f902aed96.json
tests/samples/: ecommerce.sql  users.csv
tests/samples/Maven+Fuzzy+Factory/: order_items.csv
tests/test_scripts/: debug_fk.py  debug_fk_v2.py  debug_fk_v3.py  debug_repr.py  test_parser_debug.py  test_parser_real.py  test_parser_verbose.py  test_sample.ipynb
